css/footer.css
#footer {
    background-color: #2E2F42;
    padding: 100px 0;
}

#footer a {
    font-family: "Raleway", sans-serif;
    font-size: 18px;
    font-weight: 700;
    line-height: 1.17;
    letter-spacing: 0.03em;
    text-transform: uppercase;
    color: #4d5ae5;
}

#footer p {
    color: #F4F4FD;
    max-width: 264px;
}

#footer span {
    color: #F4F4FD;
}

